--- a/gitLearn.html
+++ b/gitLearn.html
@@ -1,1 +1,25 @@
-git 学习
+<html>
+
+<head>
+    <style>
+        div {
+            
+            width: 300px;
+            height: 100px;
+            text-align: center;
+            line-height: 100px;
+            font-size: 30px;
+            background-image: linear-gradient(to right, rgb(247, 245, 243), rgb(32, 23, 13), rgb(181, 226, 57));
+            -webkit-background-clip: text;
+            color: transparent;
+            border:1px solid gray;
+            background-color: skyblue;
+        }
+    </style>
+</head>
+
+<body>
+    <div>hello world</div>
+</body>
+
+</html>
